# choice_model

./: pyproject.toml  requirements.txt  setup.cfg
.claude/: settings.local.json
IIM_core_model/: main.py
IIM_core_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
IIM_core_model/utils/: example.py  logger.py  params_loading.py  processing_functions.py
assets/: inputs.xlsx  seg_params.csv  seg_params.xlsx  ~$inputs.xlsx
config/: config_static.yaml  config_variable.yaml
tests/: test_params_loading.py
